--- a/src/main/resources/templates/employer_dealapplication.html
+++ b/src/main/resources/templates/employer_dealapplication.html
@@ -8,7 +8,6 @@
         body {
             background-color: #f8f9fa;
         }
-
         .container {
             margin-top: 50px;
             background-color: #fff;
@@ -16,26 +15,21 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
         h1 {
             text-align: center;
             margin-bottom: 20px;
         }
-
         p {
             font-size: 18px;
             margin-bottom: 10px;
         }
-
         span {
             font-weight: bold;
         }
-
         .btn-group {
             text-align: center;
             margin-top: 20px;
         }
-
         .btn {
             margin-right: 10px;
         }
@@ -46,9 +40,18 @@
     <h1>处理申请</h1>
     <p>申请者姓名：<span th:text="${job_application.getStudentName()}"></span></p>
     <p>申请理由：<span th:text="${job_application.getNotes()}"></span></p>
+    <p>学生民族：<span th:text="${student.getEthnicity()}"></span></p>
+    <p>学生性别：<span th:text="${student.getGender()}"></span></p>
+    <p>政治面貌：<span th:text="${student.getPoliticalStatus()}"></span></p>
     <div class="btn-group">
-        <button class="btn btn-success">通过</button>
-        <button class="btn btn-danger">不通过</button>
+        <form action="/approve" method="post">
+            <input type="hidden" name="applicationId" th:value="${job_application.getEmploymentId()}">
+            <button type="submit" class="btn btn-success">通过</button>
+        </form>
+        <form action="/reject" method="post">
+            <input type="hidden" name="applicationId" th:value="${job_application.getEmploymentId()}">
+            <button type="submit" class="btn btn-danger">不通过</button>
+        </form>
     </div>
 </div>
 </body>
