--- a/src/main/resources/templates/student_console.html
+++ b/src/main/resources/templates/student_console.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="container">
+
   <h1 class="mt-5">学生界面</h1>
 
   <!-- 退出登录 -->
@@ -15,6 +16,40 @@
   </form>
   <a href="/student/resume" class="btn btn-primary">查看个人简历</a>
   <div class="row mt-5">
+
+    <div class="col-md-6">
+      <h2>管理招聘信息</h2>
+      <!-- 展示招聘信息的表格 -->
+      <table class="table">
+        <thead>
+        <tr>
+          <th>岗位标题</th>
+          <th>状态</th>
+          <th>申请</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="employment : ${employments}">
+          <td th:text="${employment.jobTitle}"></td>
+          <td th:text="${employment.status}"></td>
+          <td>
+            <form th:if="${employment.status != '已关闭'}" method="post"
+                  action="/employer_console/closeEmployment" style="display:inline;">
+              <input type="hidden" name="employmentId" th:value="${employment.employmentId}">
+              <button type="submit" class="btn btn-danger">关闭申请</button>
+            </form>
+            <form th:if="${employment.status == '已关闭'}" method="post"
+                  action="/employer_console/openEmployment" style="display:inline;">
+              <input type="hidden" name="employmentId" th:value="${employment.employmentId}">
+              <button type="submit" class="btn btn-success">开启申请</button>
+            </form>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
+
     <div class="col">
       <h2>留言板</h2>
       <form>
