--- a/src/main/resources/templates/employer_console.html
+++ b/src/main/resources/templates/employer_console.html
@@ -9,18 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
-<div class="container">
-    <h1>搜索就业类型</h1>
-    <form action="/searchEmployment" method="GET">
-        <div class="mb-3">
-            <label for="searchQuery" class="form-label">输入查询关键词：</label>
-            <input type="text" class="form-control" id="searchQuery" name="type" placeholder="请输入关键词">
-        </div>
-        <button type="submit" class="btn btn-primary">搜索</button>
-    </form>
-</div>
-
 <div class="container mt-5">
     <h1 class="text-center mb-5">雇主控制台</h1>
     <div class="row">
@@ -70,7 +58,6 @@
                 </tbody>
             </table>
         </div>
-
     </div>
     <div class="row mt-5">
         <div class="col">
@@ -101,13 +88,21 @@
     <div class="row mt-5">
         <div class="col">
             <h2>留言板</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="message" class="form-label">留言内容</label>
-                    <textarea class="form-control" id="message" rows="3" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">提交留言</button>
-            </form>
+            <!-- 展示留言的表格 -->
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>留言内容</th>
+                    <th>时间</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="comment : ${comments}">
+                    <td th:text="${comment.getMessageContent()}"></td>
+                    <td th:text="${#dates.format(comment.getSendTime(), 'yyyy-MM-dd HH:mm:ss')}"></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
