--- a/src/main/resources/templates/student_console.html
+++ b/src/main/resources/templates/student_console.html
@@ -66,7 +66,7 @@
               <td th:text="${employment.jobTitle}"></td>
               <td th:text="${employment.status}"></td>
               <td>
-                <form th:if="${employment.status != '已关闭'}" method="post" action="/employer_console/closeEmployment"
+                <form th:if="${employment.status != '已关闭'}" method="post" action="/student/apply"
                       style="display:inline;">
                   <input type="hidden" name="employmentId" th:value="${employment.employmentId}">
                   <button type="submit" class="btn btn-danger btn-custom">申请</button>
